# manifold

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json
frontend/scripts/: visual-check.mjs
frontend/src/: App.tsx  api.ts  index.css  store.ts  types.ts
frontend/src/components/: ControlPanel.tsx  ManifoldScene.tsx  PlanarGraphScene.tsx  Receipts.tsx  Scoreboard.tsx  Terminal.tsx
frontend/src/components/ui/: slider.tsx
frontend/src/workers/: layoutWorker.ts
manifold/: __init__.py  config.py
manifold/api/: __init__.py  artifacts.py  server.py
manifold/cli/: __init__.py  __main__.py  commands.py  main.py  parsing.py
manifold/data/: generation.py  types.py
manifold/docs/: README.md  architecture.md  artifacts_and_outputs.md  chatgpt_baseline.md  results_and_pitch.md  running_experiments.md  visualizations.md
manifold/docs/figs/: plot_manifest.json
manifold/math/: __init__.py  dynamics.py  sheaf.py
manifold/trainer/core/: chatgpt_baseline.py  control.py  evaluation.py  lifecycle.py  trainer.py
manifold/trainer/game/: metrics.py  sensing.py
manifold/trainer/support/: policies.py  utils.py
manifold/utils/: config.py  devices.py
manifold/viz/: __init__.py  __main__.py  plots.py
scripts/: run_showcase.sh
tests/: test_api.py  test_chatgpt_baseline.py  test_cli.py  test_devices.py  test_dynamics.py  test_sensing.py  test_sheaf.py  test_training.py  test_viz.py
